fix(main css): wrap body raised class around media query
fixes #24

--- a/resources/sass/components/main.scss
+++ b/resources/sass/components/main.scss
@@ -4,9 +4,11 @@
         z-index: 1;
     }
 
-    &__body--raised {
-        margin: -60px 30px 0;
-        border-radius: 6px 6px 0 0;
-        box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.2);
+    @include media-breakpoint-up(md) {
+        &__body--raised {
+            margin: -60px 30px 0;
+            border-radius: 6px 6px 0 0;
+            box-shadow: 0 16px 24px 2px rgba(0,0,0,0.14), 0 6px 30px 5px rgba(0,0,0,0.12), 0 8px 10px -5px rgba(0,0,0,0.2);
+        }
     }
 }
